# rust-web-app

./: .env.example  Cargo.toml  README.md  api.http  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: courses.rs  mod.rs
docker/rust/: Dockerfile  init
mooc-context/: Cargo.toml
mooc-context/src/: lib.rs
mooc-context/src/courses/: mod.rs
mooc-context/src/courses/controller/: create_course.rs  mod.rs
mooc-context/src/courses/repository/: course_repository.rs  mod.rs
mooc-context/src/courses/service/: create_course.rs  mod.rs
sql/: 20220208_174200.sql
src/: course.rs  main.rs
