[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.3"
actix-cors = "0.5.4"
serde = "1.0"
serde_json = "1.0"
uuid = "0.8.2"
chrono = "0.4.19"
async-trait = "0.1.52"

[dependencies.sqlx]
version = "0.4.2"
default-features = false
features = ["runtime-actix-native-tls", "postgres", "macros", "uuid", "chrono"]
